@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Sun Mar 26 19:26:00 2006
+# Generated on Wed Mar 29 13:29:26 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
@@ -72,6 +72,9 @@ class Gpodder(SimpleGladeApp):
 
     download_status_manager = None
     tooltips = None
+
+    # Local DB
+    ldb = None
 
     def __init__(self, path="gpodder.glade",
                  root="gPodder",
@@ -155,7 +158,6 @@ class Gpodder(SimpleGladeApp):
 
         # tooltips :)
         self.tooltips = gtk.Tooltips()
-        self.tooltips.set_delay( 500)
         self.tooltips.set_tip( self.btnEditChannel, "Channel Info")
         
         #Add Drag and Drop Support
@@ -181,10 +183,11 @@ class Gpodder(SimpleGladeApp):
 
     def updateDownloadedComboBox( self):
         # now, update downloaded feeds tab:
-        ldb = localDB()
+        if self.ldb == None:
+            self.ldb = localDB()
         # update downloaded_channels list
-        self.downloaded_channels = ldb.getDownloadedChannelsList()
-        self.comboDownloaded.set_model( ldb.getDownloadedChannelsModel())
+        self.downloaded_channels = self.ldb.getDownloadedChannelsList()
+        self.comboDownloaded.set_model( self.ldb.getDownloadedChannelsModel())
         try:
             self.comboDownloaded.set_active( self.active_downloaded_channels)
         except:
@@ -470,7 +473,7 @@ class Gpodder(SimpleGladeApp):
             return
         
         if os.path.exists( filename) == False and self.download_status_manager.is_download_in_progress( current_podcast.url) == False:
-            downloadThread( current_podcast.url, filename, None, self.download_status_manager, current_podcast.title, current_channel, current_podcast).download()
+            downloadThread( current_podcast.url, filename, None, self.download_status_manager, current_podcast.title, current_channel, current_podcast, self.ldb).download()
         else:
             message_dialog = gtk.MessageDialog( self.gPodder, gtk.DIALOG_MODAL, gtk.MESSAGE_INFO, gtk.BUTTONS_OK)
             message_dialog.set_markup( "<big><b>Already downloaded</b></big>\n\nYou have already downloaded this episode.\nOr you are currently downloading it.")
@@ -512,7 +515,7 @@ class Gpodder(SimpleGladeApp):
         selected_value = self.comboDownloaded.get_model().get_value( selection_iter, 0)
         if libgpodder.isDebugging():
             print "comboDownloaded_changed with: " + selected_value
-        new_model = localDB().getDownloadedEpisodesModelByFilename( selected_value)
+        new_model = self.ldb.getDownloadedEpisodesModelByFilename( selected_value)
         self.treeDownloaded.set_model( new_model)
     #-- Gpodder.on_comboDownloaded_changed }
 
