@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Sun Mar 26 19:26:00 2006
+# Generated on Wed Mar 29 13:29:26 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
